--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
 
+    <!-- Add these lines for home screen icons -->
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="../src/assets/money.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="theme-color" content="#ffa100">
+
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/11.2.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
